structural-typing/tests/ui/generic_struct_rejected.stderr
error: structural typing does not support generic structs yet
 --> tests/ui/generic_struct_rejected.rs:4:15
  |
4 | struct Generic<T> {
  |               ^^^
