structural-typing/tests/ui/generic_struct_rejected.rs
use structural_typing::structural;

#[structural]
struct Generic<T> {
    value: T,
}

fn main() {}
